--- a/aula01/aula01.html
+++ b/aula01/aula01.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>tewsste de imagens de fundo</title>
+    <title>teste de imagens de fundo</title>
 <style>
 body{
 background-image: url(imagens/madeira2.jpg);
@@ -14,12 +14,27 @@ div.quadrado{
     background-color: bisque;
 border: 2px solid black;
 height: 300px;
-width: 2000px;
+width: 200px;
 display: inline-block;
 border-radius: 10px;
 
 
 }
+#q1{
+    background-color: skyblue;
+}
+#q2{
+background-image: 
+linear-gradient(to bottom, yellow, red);
+
+}
+#q3{
+background-image: url(imagens/branco3.jpg);
+
+}
+
+
+
 
 </style>
 
